# PASTA_bench

./: Cargo.toml  README.md
docs/bench/: bench.md
docs/phases/: GlobalSetup.md  Registration.md
src/: crypto_core.rs  crypto_pasta.rs  lib.rs
src/protocols/: mod.rs  pasta.rs
