[package]
name = "pasta_bench"
version = "0.1.0"
edition = "2021"

[lib]
name = "pasta_bench"
path = "src/lib.rs"

[[bin]]
name = "bench_pasta"
path = "src/bin/bench_pasta.rs"

[dependencies]
blake3 = "1"
chacha20poly1305 = "0.10"
curve25519-dalek = { version = "4", features = ["alloc", "rand_core"] }
rand_core = "0.6"
rand_chacha = "0.3"

# TTG implementation uses BLS12-381 signatures.
bls12_381 = "0.8"
group = "0.13"
ff = "0.13"
subtle = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"